[package]
name = "bevy_bc_ime_text_field"
version = "0.1.2"
edition = "2024"
license = "MIT OR Apache-2.0"
description="A simple IME-compatible text field plugin for Bevy (Windows only). Supports both UI and 2D text input."
repository = "https://github.com/SheepBC/bevy_bc_ime_text_field"
readme = "README.md"
documentation = "https://docs.rs/bevy_bc_ime_text_field"
categories = ["game-development", "gui", "text-editors"]
keywords = ["bevy", "ui", "text", "input"]

[dependencies]
bevy = { version = "0.18.0", features = [
    "bevy_color",
    "bevy_text",
    "bevy_picking",
    "bevy_sprite",
    "bevy_ui",
    "bevy_window"
] }
web-time = "1.1.0"
undo_2 = "0.2.1"
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
arboard = "3.6.1"

[package.metadata.docs.rs]
default-target = "x86_64-pc-windows-gnu"
targets = ["x86_64-pc-windows-gnu"]

